--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 </head>
 
 <body>
-    <div class="preloader"><button class="th-btn preloaderCls link-anim"><span class="text-anime"><span
-                    class="text">Cancel Preloader</span></span></button>
+    <div class="preloader">
         <div class="preloader-inner"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 128 128" height="128px"
                 width="128px" class="pl">
                 <circle stroke-dashoffset="-376.4" stroke-dasharray="377 377" stroke-linecap="round"
@@ -386,7 +385,7 @@
                     <div class="experience-card">
                         <div class="experience-card-title-wrap">
                             <h4 class="experience-card-title">UI/UX Designer</h4>
-                            <p class="experience-card-location">Company: Dracena Media LLP</p>
+                            <p class="experience-card-location">Company: Webfeed Solutions Pvt. Ltd.</p>
                         </div>
                         <div class="experience-card-text">
                             <p>Crafting intuitive digital experiences that delight and inspire.</p>
@@ -398,7 +397,7 @@
                     <div class="experience-card">
                         <div class="experience-card-title-wrap">
                             <h4 class="experience-card-title">Graphic Designer</h4>
-                            <p class="experience-card-location">Company: Kaani Studio</p>
+                            <p class="experience-card-location">Company: Indigo Grafix</p>
                         </div>
                         <div class="experience-card-text">
                             <p>Bringing ideas to life through visually compelling storytelling and strategic design
