--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="row gy-5 justify-content-center align-items-center flex-row-reverse">
                 <div class="col-xxl-6 col-xl-6 col-lg-7">
                     <div class="hero-img-2 text-center">
-                        <div class="thumb"><img src="assets/img/hero/hero_2_1.png" alt="img"></div>
+                        <div class="thumb"><img src="assets/img/hero/banner.png" alt="img"></div>
                     </div>
                 </div>
                 <div class="col-xxl-6 col-xl-6 col-lg-5">
